# OpenInsurance

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LESSONS.md  LICENSE  LICENSE-CONTENT  Makefile  NOTICE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements.txt  server.json
.github/workflows/: freshness.yml  pages.yml  release.yml  validate.yml
_meta/: BOOTSTRAP-COUNTRY.md  README.md  be-market-census.md  be-product-inventory.md  ch-market-census.md
_meta/discovery/: acerta.md  acm.md  actel.md  aedes.md  agila.md  aig.md  allianz-assistance.md  allianz.md  arag.md  arces.md  ardenne-prevoyante.md  athora.md  b2bike.md  belfius-direct.md  bikmo.md  cardif.md  cfdp.md  chubb.md  cigna.md  cph-life.md  (+38 more)
assets/: architecture.html  make_visuals.py
extraction-agent/: EXTRACTION_TASK.md  GROUNDING_RULES.md  OUTPUT_SPEC.md  README.md  SYSTEM_PROMPT.md
mcp/: README.md  insurance_wiki_mcp.py  requirements.txt
pipeline/: build_index.py  build_wiki.py  check_freshness.py  check_site_links.py  common.py  discover.py  download.py  extract.py  link.py  render.py  validate.py  verify_grounding.py
schema/: branch.schema.json  country.schema.json  coverage_categories.json  insurer.schema.json  product.schema.json  regulation.schema.json
tests/: bench_tools.py  conftest.py  test_ambiguity.py  test_coverage_and_verify.py  test_document_selection.py  test_extraction_agent.py  test_get_page_security.py  test_matching.py  test_pipeline_link.py  test_publish_surface.py  test_robustness.py  test_tools_smoke.py
wiki/: 00 - START HERE.md
(+717 files in other folders)
